fix project navbar link path and inline spacing issues.

--- a/app/page.css
+++ b/app/page.css
@@ -2,8 +2,8 @@
   display: grid;
   gap: 5rem;
   color: white;
-  margin-left: 1rem;
-  margin-right: 1rem;
+  /* margin-left: 1rem;
+  margin-right: 1rem; */
 }
 
 .about {
